--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "",
+    "test": "jest unit.test",
+    "test-all": "jest",
+    "lint": "eslint"
   },
   "dependencies": {
     "awilix": "^4.2.3",
@@ -28,6 +31,9 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.5.1",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.0.0",
     "typeorm-fixtures": "^0.8.5"
