--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   "dependencies": {
     "awilix": "^4.2.3",
     "awilix-express": "^3.0.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "opentracing": "^0.14.4",
     "pg": "^7.18.0",
+    "reflect-metadata": "^0.1.13",
     "sqs-consumer": "^5.4.0",
     "ts-node": "^8.6.2",
     "typeorm": "^0.2.22",
@@ -27,7 +32,11 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/compression": "^1.0.1",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/helmet": "0.0.45",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.5.1",
     "@types/winston": "^2.4.4",
@@ -36,6 +45,6 @@
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.0.0",
-    "typeorm-fixtures": "^0.8.5"
+    "typeorm-fixtures-cli": "^1.4.2"
   }
 }
