--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    // "sourceMap": true,
+    "sourceMap": true,
     "strict": true,
     // "noImplicitAny": true,
     // "strictNullChecks": true,
