Adding basic structure
Signed-off-by: Geovani de Souza <geovanisouza92@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         "-r",
         "ts-node/register"
       ],
-      "internalConsoleOptions": "openOnSessionStart"
+      "outputCapture": "std"
     }
   ]
 }
