--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "awilix-express": "^3.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "opentracing": "^0.14.4",
@@ -34,9 +36,11 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/helmet": "0.0.45",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.5.1",
     "@types/winston": "^2.4.4",
