--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "",
     "test": "jest unit.test",
     "test-all": "jest",
-    "lint": "eslint"
+    "lint": "eslint '**/*.ts'"
   },
   "dependencies": {
     "awilix": "^4.2.3",
@@ -47,7 +47,9 @@
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
+    "husky": "^4.2.1",
     "jest": "^25.1.0",
+    "lint-staged": "^10.0.7",
     "ts-jest": "^25.0.0",
     "typeorm-fixtures-cli": "^1.4.2"
   }
