--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.7",
+    "prettier": "^1.19.1",
     "ts-jest": "^25.0.0",
     "typeorm-fixtures-cli": "^1.4.2"
   }
