--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "awilix": "^4.2.3",
     "awilix-express": "^3.0.0",
     "body-parser": "^1.19.0",
+    "continuation-local-storage": "^3.2.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -30,11 +31,13 @@
     "ts-node": "^8.6.2",
     "typeorm": "^0.2.22",
     "typescript": "^3.7.5",
+    "uuid": "^3.4.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
+    "@types/continuation-local-storage": "^3.2.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
@@ -42,6 +45,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.5.1",
+    "@types/uuid": "^3.4.7",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
