--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "awilix": "^4.2.3",
     "awilix-express": "^3.0.0",
     "body-parser": "^1.19.0",
-    "continuation-local-storage": "^3.2.1",
+    "cls-hooked": "^4.2.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
+    "@types/cls-hooked": "^4.3.0",
     "@types/compression": "^1.0.1",
-    "@types/continuation-local-storage": "^3.2.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
