--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 
 services:
   db:
-    image: postgres:9.6
+    image: postgres:12-alpine
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - ./scripts/:/docker-entrypoint-initdb.d/
