--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   db:
     image: postgres:12-alpine
+    environment:
+      POSTGRES_PASSWORD: postgres
     ports:
       - '5432:5432'
     volumes:
