--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node bin/www",
+    "prestart": "ts-node scripts/wire-everything",
+    "start:watch": "nodemon --exec 'npm start' --ext ts",
     "test": "jest unit.test",
     "test-all": "jest",
     "lint": "eslint '**/*.ts'"
@@ -40,10 +42,12 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.5.1",
+    "@types/prettier": "^1.19.0",
     "@types/uuid": "^3.4.7",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
@@ -51,9 +55,11 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "glob": "^7.1.6",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.7",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "ts-jest": "^25.0.0",
     "typeorm-fixtures-cli": "^1.4.2"
