--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:watch": "nodemon --exec 'npm start' --ext ts",
     "test": "jest unit.test",
     "test-all": "jest",
+    "create-migration": "typeorm migration:create -d migrations -n",
     "lint": "eslint '**/*.ts'"
   },
   "dependencies": {
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.2",
     "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
+    "@types/jest": "^25.1.3",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.5.1",
